Fix tab title colors not being recalculated exiting single-tab mode.

When a new tab is added in the background, its title color is calcuated
before single-tab mode is updated, which means it uses a frame color of
white regardless of the actual frame color. This patch fixes that.

This patch also changes Tab::ViewHierarchyChanged to AddedToWidget since
it's more correct and helped me debug.

Bug: 855338
Change-Id: I007c5f1577260e22265f5c3df877955f3953cfee
Reviewed-on: https://chromium-review.googlesource.com/1119574
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571563}
Former-commit-id: fcdf2cf355180339a1c58433a1f42a40f30e40b2